# FlashBackToTheFuture

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  build_csfml.sh  compile_flags.txt  my_rpg.desktop
.github/workflows/: publish.yml  release.sh  release.yml
assets/data/ennemy/: amongus.json  boss_dark_ennemy.json  boss_nico.json  boss_sans.json  boss_spider.json  dark_ennemy.json  forest_people.json  hobo.json  magician.json  ninho.json  pinguin_killer.json  warrior.json
assets/data/menu/: charge_button.json  credits.json  dead_screen.json  main.json  making_of_data.json  menu_button.json  pause.json  play_pop_up.json  pressed.json  settings_menu.json
assets/data/npc/: check_into_chest.json  chest.json  closed_chest.json  magician.json  magician_end.json  magician_intro.json  ninho.json  rotation_data.json  test.json
assets/data/player/: data.json  inventory.json  inventory_data.json  key_obj.json  stats.json  stats_upgrade.json  stop.json
assets/data/pop_text/: ennemy_hurt.json  use_potion.json
assets/data/story_mode/: sandbox.json  save.json  stage_0.json  stage_1.json  stage_2.json  stage_3.json  stage_4.json  stage_5.json  stage_6.json  stage_7.json
assets/image/story_mode/: stage_0.json  stage_1.json  stage_2.json
assets/json/: amongus.json
assets/json_menu/: button.json  charge_button.json
engine-examples/: scene_loading.c
engine_examples/: button.c  create_amongus.c  ex.c  framebuffer.c  plan.c  scene_loading.c  soundbuffer.c
include/: audio.h  ennemies.h  ennemy_pathfind.h  macro.h  main_menu.h  maths.h  maths_function.h  menu.h  meteo.h  my_rpg.h  npc.h  player.h  rpg_struct.h  stage.h
lib/: CMakeLists.txt  Makefile
lib/include/: list.h  my_bgs.h  my_bgs_button_generator.h  my_bgs_components.h  my_bgs_framebuffer.h  my_conversions.h  my_dico.h  my_fs.h  my_json.h  my_macro.h  my_puts.h  my_strings.h  my_wordarray.h
lib/libbgs/: Makefile
lib/libbgs/include/: framebuffer.h  libbgs_private.h
lib/libconv/: Makefile
lib/libconv/src/: my_atodf.c  my_atodf_err.c  my_atof.c  my_atof_err.c  my_atoi.c  my_atoi_err.c  my_compute_power_rec.c  my_itoa.c  my_itoa_base.c  my_itoa_base_err.c  my_itoa_err.c
lib/libdico/: Makefile
lib/libdico/src/: add.c  destroy.c  get.c  pop.c  rem.c
lib/libfs/: Makefile
lib/libfs/src/: fs_get_content.c  fs_get_size.c  fs_open_ronly.c
lib/libjson/: Makefile
lib/liblist/: Makefile
lib/liblist/src/: cast_from_list.c  free.c  get.c  list_add.c  list_create.c  rm.c  str_to_word_list.c  swap.c
lib/libputs/: Makefile
lib/libputs/src/: my_printf.c  my_putchar.c  my_putnbr.c  my_putnbr_base.c  my_putstr.c  my_putunbr_base.c
lib/libstr/: Makefile
lib/libstr/src/: my_calloc.c  my_revstr.c  my_strcat.c  my_strcmp.c  my_strcontainc.c  my_strcontains.c  my_strcpy.c  my_strdup.c  my_strealloc.c  my_strlen.c  my_strstartswith.c
lib/libwa/: Makefile
lib/libwa/src/: my_wordarray_free.c  my_wordarray_from_str.c  my_wordarray_from_wordarray.c  my_wordarray_index_startswith.c  my_wordarray_len.c  my_wordarray_show.c
scripts/: bundle-linux.sh  bundle-macos.sh  bundle-windows.ps1  compil.ps1  compil.sh  format.ps1  format.sh  install-deps-linux.sh  install-deps-macos.sh  install-deps-windows.ps1
src/: CMakeLists.txt  event_menu.c  init_menu.c  main.c  play_menu.c  pop_up_management.c
src/audio/: audio_static.c  init_music.c  init_sound.c  play_audio.c  play_sound.c
src/ennemy/: add_to_ennemy_list.c  amongus.c  amongus_change_rect.c  check_drop.c  create_ennemy.c  destroy_ennemy.c  drop_right_item.c  ennemy_check_hurt.c  ennemy_get_view_dir.c  ennemy_static.c  ennemy_update.c  follow_player.c  is_player_in_range.c  sprite_set_change.c  temp_file_temp_path_find.c  update_ennemy_move.c
src/ennemy/update/: check_wall.c  ennemy_check_is_dashing.c  ennemy_update.c  hurt.c  update_ennemy_attack.c  update_ennemy_move.c
src/hud/: add_main_menu_elements_to_hud_list.c  check_evolution_stat.c  hud_apply_right_pos.c  increment_hud_pos.c  init_energy_hud.c  init_hud_elements.c  init_life_hud.c  init_text_hud.c  init_xp_hud.c  life_hud.c  manage_hud.c  update_text_hud.c  update_xp_bar.c
src/launch/: add_main_menu_elements_to_uid_list.c  init_credits.c  init_pause_button.c  launch_game.c  launch_next_stage.c  launch_stage.c  launch_static.c  launch_story_mode.c  move_object_between_scene.c  object_change_scene.c  replace_objects_in_next_stage.c  scene_loading_basic.c  stats_component.c  temp_file_temp_pause_button.c  uid_apply_right_pos.c
src/map/: change_meteo_json.c  check_collision.c  check_player_pos_in_map.c  create_collision_map.c  create_map.c  square_set_components.c  stage_map_to_collision_array.c  wordarray_free_cast.c
src/map/square_event/: is_player_on_square.c  knockback.c
src/map/square_updates/: activate_dash.c  activate_player_down_scale.c  activate_player_up_scale.c  is_player_on_square.c  knockback.c  next_stage.c  npc_spawner.c  spawner.c
src/math/: check_circle_col.c  get_distance.c  get_rand_number.c  get_vector_dir.c  gore_effect.c  rect_contains_segment.c
src/menu/: button_event_array.c  menu_static.c  pressed_button_event.c
src/meteo/: add_leaf.c  add_movement.c  add_snow.c  add_sunshine.c  change_meteo.c  init_movement.c  meteo_handler.c  meteo_handler_init.c
src/npc/: add_npc.c  add_text_dialog.c  add_text_dialog_json.c  aplly_rect_npc.c  create_npc.c  init_dialog.c  pretyprint.c
src/pathfind/: check_start_in_list.c  destroy_pathfind.c  get_new_pos.c  init_find.c  init_path.c  pathfind_add_to_scene.c
src/player/: create_player.c  destroy_player.c  init_player_scale_handling.c  init_player_view.c  player_check_hurt.c  player_check_hurt_during_attack.c  player_static.c  set_player_default_stats.c  set_stop.c
src/pop_text_generator/: create_pop_text.c  create_stat_pop_text.c  update_text.c
tests/: f.json  fn_tests.sh  menu.json  obj_change_scene.c  pathfind.c  pause_menu.c  player.c  player_movements.c  sword.c  t.json
tests/crit_test/: rect_contains_segment.c
tests/json/: file_1.json  file_2.json  file_float_nb.json  file_neg_nb.json
(+192 files in other folders)
